agregado assets y cambio de algunas camisas

--- a/index.html
+++ b/index.html
@@ -28,48 +28,48 @@
     </header>
     <main>
         <aside>
-            <h2>Productos</h2>
+            <h2>Productos: </h2>
         </aside>
         <section>
             <picture>
-                <img src="#" 
+                <img src="./assets/camisaBla_p.png " width="300px" height="400px" 
                 alt="imagen de camisa blanca"
                 title="camisa blanca"
                 />
             </picture>
             <h2>Camisa blanca</h2>
             <picture>
-                <img src="#" 
+                <img src="./assets/camisaNeg_p.png" width="300px" height="400px"
                 alt="imagen de camisa negra"
                 title="camisa negra"
                 />
             </picture>
             <h2>Camisa negra</h2>
             <picture>
-                <img src="#" 
+                <img src="./assets/camisaAzu_p.png" width="300px" height="400px"
                 alt="imagen de camisa azul"
                 title="camisa azul"
                 />
             </picture>
             <h2>Camisa azul</h2>
             <picture>
-                <img src="#" 
+                <img src="./assets/camisaAma_p.png" width="300px" height="400px"
                 alt="imagen de camisa amarilla"
                 title="camisa amarilla"
                 />
             </picture>
             <h2>Camisa amarilla</h2>
             <picture>
-                <img src="#" 
-                alt="imagen de camisa roja"
-                title="camisa roja"
+                <img src="./assets/camisaVer_p.jpg" width="300px" height="400px"
+                alt="imagen de camisa verde"
+                title="camisa verde"
                 />
             </picture>
             <h2>Camisa roja</h2>
             <picture>
-                <img src="#" 
-                alt="imagen de camisa del tachira"
-                title="camisa del tachira"
+                <img src="./assets/camisaEst_p.jpg" width="300px" height="400px"
+                alt="imagen de camisa de estampado"
+                title="camisa de estampado"
                 />
             </picture>
             <h2>Camisa del tachira</h2>
